# train

./: Cargo.toml  README.md  design
.github/workflows/: main.yml
src/: main.rs
src/abst/: console_renderer.rs  mod.rs  rail.rs  rail_parser.rs  text_parser.rs  train.rs
src/imp/: mod.rs  rail_parser.rs  train.rs
