[package]
name = "train"
version = "0.1.0"
authors = ["zinnusl <zinnusl@draig.de>"]
license = "MIT"
edition = "2021"
rust-version = "1.68"

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
chrono = "0.4.15"
clap = { version = "3.0.6", features = ["derive", "env"] }
cpal = { version = "0.14.0", features = [] }
hound = "3.4.0"
midir = "0.8.0"
rand = { version = "0.8.3", features = ["small_rng"] }
ringbuf = "0.2.2"
serde = "1.0.117"
serde_yaml = "0.8.14"
more-di = "*"

[dev-dependencies]
assert_approx_eq = "1.1.0"
pretty_assertions = "*"
